Horizon colour drawn on two edges of screen when a 2D filter is active #31978

Closed
opened 2012-07-01 07:17:39 +02:00 by Alex Fraser · 3 comments
Member

Category: Rendering

%%%If a 2D filter is enabled, the top and right edges of the screen are filled in with the horizon colour.

To reproduce:

  1. Start with the default file.
  2. Switch to GLSL mode.
  3. Switch to camera view.
  4. Set the horizon (background) colour to something other than black (e.g. white).
  5. Add an object that fills the view, and give it a material that has a different colour to the background (e.g. blue).
  6. Add logic bricks to enable a 2D filter.
  7. Start the game.

Expected result: The screen has a black border, and is filled with blue.
Actual result: As above, but there is a 1px line of white along the top and right edges of the blue fill.

This is demonstrated in the attached files.

OS: Ubuntu 12.04 (64-bit)
Video: ATI Mobility Radeon 5430
Blender: r48413 (2.63.13) (bug present)
Blender: r46461 (2.63a) (bug NOT present)%%%

**Category**: Rendering %%%If a 2D filter is enabled, the top and right edges of the screen are filled in with the horizon colour. To reproduce: 1. Start with the default file. 2. Switch to GLSL mode. 3. Switch to camera view. 4. Set the horizon (background) colour to something other than black (e.g. white). 5. Add an object that fills the view, and give it a material that has a different colour to the background (e.g. blue). 6. Add logic bricks to enable a 2D filter. 7. Start the game. Expected result: The screen has a black border, and is filled with blue. Actual result: As above, but there is a 1px line of white along the top and right edges of the blue fill. This is demonstrated in the attached files. OS: Ubuntu 12.04 (64-bit) Video: ATI Mobility Radeon 5430 Blender: r48413 (2.63.13) (bug present) Blender: r46461 (2.63a) (bug NOT present)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%This should now be fixed as of r48664.%%%

%%%This should now be fixed as of r48664.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31978
No description provided.