Fix for [#31978] "Horizon colour drawn on two edges of screen when a 2D filter is active" reported by Alex Fraser.

The glViewport used for 2D Filters wasn't quite matching the 3d view. It seems the height and width were both off by one. There may be a deeper bug with the canvas rectangle having slightly wrong dimensions, but this at least fixes the 2D Filters.